project(solutions)

include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/test)

add_executable(0_1_knapsack 0_1_knapsack.cpp)
add_executable(0_sum_subset 0_sum_subset.cpp)
add_executable(2_difference 2_difference.cpp)
add_executable(2_exists 2_exists.cpp)
add_executable(2_for_all 2_for_all.cpp)
add_executable(2_sum 2_sum.cpp)
add_executable(3_sum_closest 3_sum_closest.cpp)
add_executable(3_sum 3_sum.cpp)
add_executable(4_sum 4_sum.cpp)
add_executable(Add_binary add_binary.cpp)
add_executable(Add_two_number_list add_two_number_list.cpp)
add_executable(Add_operators_in_string add_operators_in_string.cpp)
add_executable(AddingCredits adding_credits.cpp)
add_executable(Anagrams anagrams.cpp)
add_executable(Anonymous_letter anonymous_letter.cpp)
add_executable(Approximate_sort approximate_sort.cpp)
add_executable(arbitrage arbitrage.cpp)
add_executable(async_thread async_thread.cpp)
add_executable(Average_top_3_scores average_top_3_scores.cpp)
add_executable(Balanced_binary_tree Balanced_binary_tree.cpp Binary_tree_prototype.h)
add_executable(Bentleybsearch bentley_bsearch.cpp)
add_executable(Biggest_product_n_1 Biggest_product_n_1.cpp)
add_executable(Biggest_product_n_1_math Biggest_product_n_1_math.cpp)
add_executable(Bignumber_multiplication Bignumber_multiplication.cpp)
add_executable(Binary_tree_level_order_bottom_up binary_tree_level_order_bottom_up.cpp)
add_executable(Binary_tree_postorder_traversal_iterative_alternative binary_tree_postorder_traversal_iterative_alternative.cpp)
add_executable(Binary_tree_postorder_traversal_iterative binary_tree_postorder_traversal_iterative.cpp)
add_executable(Binary_tree_preorder_traversal_iterative binary_tree_preorder_traversal_iterative.cpp)
add_executable(Binary_tree_zigzag_level_order_traversal binary_tree_zigzag_level_order_traversal.cpp)
add_executable(Binary_search_Ai Binary_search_Ai=i.cpp)
add_executable(Binary_search_circular_array Binary_search_circular_array.cpp)
add_executable(Binary_search_circular_array_with_duplicates Binary_search_circular_array_with_duplicates.cpp)
add_executable(Binary_search_first_k Binary_search_first_k.cpp)
add_executable(Binary_search_larger_k Binary_search_larger_k.cpp)
add_executable(Binary_search_unknown_length Binary_search_unknown_length.cpp)
add_executable(Binary_tree_level_order Binary_tree_level_order.cpp)
add_executable(Binary_tree_lock Binary_tree_lock.cpp)
add_executable(Binary_tree_to_doubly_linked_list Binary_tree_to_doubly_linked_list.cpp)
add_executable(Bonus_improved bonus_improved.cpp)
add_executable(Bonus bonus.cpp)
add_executable(BST_lowest_common_ancestor BST_lowest_common_ancestor.cpp)
add_executable(BST_sorted_order BST_sorted_order.cpp)
add_executable(BST_to_sorted_doubly_list BST_to_sorted_doubly_list.cpp)
add_executable(Build_BST_from_sorted_array Build_BST_from_sorted_array.cpp)
add_executable(Buy_and_sell_stock_twice buy_and_sell_stock_twice.cpp)
add_executable(Buy_and_sell_stock buy_and_sell_stock.cpp)
add_executable(Can_string_be_palindrome Can_string_be_palindrome.cpp)
add_executable(Celebrity_finding Celebrity_finding.cpp)
add_executable(Checking_cycle Checking_cycle.cpp)
add_executable(Checking_cycle_alternative Checking_cycle_alternative.cpp)
add_executable(Circular_queue Circular_queue.cpp)
add_executable(Climb_stairs climb_stairs.cpp)
add_executable(Clone_graph clone_graph.cpp)
add_executable(Close_search Close_search.cpp)
add_executable(Closest_int_same_bits_alternative closest_int_same_bits_alternative.cpp)
add_executable(Closest_int_same_bits Closest_int_same_bits.cpp)
add_executable(Closest_int_same_bits_alternative closest_int_same_bits_alternative.cpp)
add_executable(Closest_pair_points closest_pair_points.cpp)
add_executable(Closest_palindrome closest_palindrome.cpp)
add_executable(Closest_stars closest_stars.cpp)
add_executable(Closest_to_median closest_to_median.cpp)
add_executable(Coin_change coin_change.cpp)
add_executable(Collatz_conjecture collatz_conjecture.cpp)
add_executable(Combinations_unique combinations_unique.cpp)
add_executable(Combinations combinations.cpp)
add_executable(Compare_k_th_largest_in_heap compare_k_th_largest_in_heap.cpp)
add_executable(Completion_search completion_search.cpp)
add_executable(Completion_search_space_efficient completion_search_space_efficient.cpp)
add_executable(Compute_random_permutation compute_random_permutation.cpp)
add_executable(Computing_binomial_coefficients computing_binomial_coefficients.cpp)
add_executable(Computing_x_n computing_x^n.cpp)
add_executable(Connect_leaves_binary_tree connect_leaves_binary_tree.cpp)
add_executable(Container_with_most_water container_with_most_water.cpp)
add_executable(Conversion_sorted_array conversion_sorted_array.cpp)
add_executable(Convert_base convert_base.cpp)
add_executable(Copying_postings_list copying_postings_list.cpp)
add_executable(Count_bits count_bits.cpp)
add_executable(Count_inversions count_inversions.cpp)
add_executable(Count_occurrences_in_sentence count_occurrences_in_sentence.cpp)
add_executable(Cyclic_right_shift cyclic_right_shift.cpp)
add_executable(Delete_list delete_list.cpp)
add_executable(Deletion_list deletion_list.cpp)
add_executable(Descendant_and_ancestor descendant_and_ancestor.cpp)
add_executable(Distinct_sorted_list distinct_sorted_list.cpp)
add_executable(Division division.cpp)
add_executable(Division_no_operator division_no_operator.cpp)
add_executable(DivisionFloat division_float.cpp)
add_executable(Doors doors.cpp)
add_executable(Drawing_skylines drawing_skylines.cpp)
add_executable(Drawing_skylines_alternative drawing_skylines_alternative.cpp)
add_executable(Dutch_national_flag dutch_national_flag.cpp)
add_executable(Dutch_national_flag_slow_inplace dutch_national_flag_slow_inplace.cpp)
add_executable(Dutch_national_flag_two_passes dutch_national_flag_two_passes.cpp)
add_executable(Elias_coding elias_coding.cpp)
add_executable(Eliminate_duplicate eliminate_duplicate.cpp)
add_executable(Equiv_classes equiv_classes.cpp)
add_executable(Even_odd_array even_odd_array.cpp)
add_executable(Even_odd_merge_linked_list even_odd_merge_linked_list.cpp)
add_executable(Exterior_binary_tree Exterior_binary_tree.cpp)
add_executable(Fibonacci fibonacci.cpp)
add_executable(Find_element_appears_once find_element_appears_once.cpp)
add_executable(Find_k_largest_BST find_k_largest_bst.cpp)
add_executable(Find_kth_element_in_two_sorted_arrays find_kth_element_in_two_sorted_arrays.cpp)
add_executable(Find_longest_arithmetic_progression find_longest_arithmetic_progression.cpp)
add_executable(Find_missing_and_duplicate find_missing_and_duplicate.cpp)
add_executable(Find_missing_and_duplicate_XOR find_missing_and_duplicate_xor.cpp)
add_executable(Finding_min_max finding_min_max.cpp)
add_executable(First_missing_positive first_missing_positive.cpp)
add_executable(Gassing_up gassing_up.cpp)
add_executable(Gaussian_elimination gaussian_elimination.cpp)
add_executable(Gaussian_primes gaussian_primes.cpp)
add_executable(GCD gcd.cpp)
add_executable(GCD1 gcd1.cpp)
add_executable(Generate_parentheses generate_parentheses.cpp)
add_executable(Generate_spiral_matrix Generate_spiral_matrix.cpp)
add_executable(Generating_a_b_sqrt2_improved generating_a_b_sqrt2_improved.cpp)
add_executable(Generating_a_b_sqrt2 Generating_a_b_sqrt2.cpp)
add_executable(Gray_code_backtrack gray_code_backtrack.cpp)
add_executable(Gray_code gray_code.cpp)
add_executable(Hash_dictionary hash_dictionary.cpp)
add_executable(Height_determination height_determination.cpp)
add_executable(Highest_affinity_pairs highest_affinity_pairs.cpp)
add_executable(House_majority house_majority.cpp)
add_executable(Huffman_encoding huffman_encoding.cpp)
add_executable(Image_compression image_compression.cpp)
add_executable(Indirect_sort indirect_sort.cpp)
add_executable(Inorder_traversal_with_parent Inorder_traversal_with_parent.cpp)
add_executable(Insert_interval insert_interval.cpp)
add_executable(Insert_list insert_list.cpp)
add_executable(Insertion_deletion_BST insertion_deletion_bst.cpp)
add_executable(Insertion_sort_list insertion_sort_list.cpp)
add_executable(Integer_to_roman integer_to_roman.cpp)
add_executable(Interconverting_string_integer Interconverting_string_integer.cpp)
add_executable(Interleaving_string interleaving_string.cpp)
add_executable(Intersect_rectangle intersect_rectangle.cpp)
add_executable(Intersect_sorted_arrays intersect_sorted_arrays.cpp)
add_executable(Is_binary_tree_a_BST is_binary_tree_a_bst.cpp)
add_executable(Is_binary_tree_a_BST_BFS is_binary_tree_a_bst_bfs.cpp)
add_executable(Is_binary_tree_a_BST_const_space is_binary_tree_a_bst_const_space.cpp)
add_executable(Is_palindromic is_palindromic.cpp)
add_executable(Job_assignment job_assignment.cpp)
add_executable(Jump_game_min_steps jump_game_min_steps.cpp)
add_executable(Jump_game jump_game.cpp)
add_executable(Justify_text justify_text.cpp)
add_executable(K_balanced_binary_tree k_balanced_binary_tree.cpp)
add_executable(K_largest_elements_binary_heap k_largest_elements_binary_heap.cpp)
add_executable(K_th_element_streaming k_th_element_streaming.cpp)
add_executable(K_th_largest_element_large_n k_th_largest_element_large_n.cpp)
add_executable(K_th_node_binary_tree k_th_node_binary_tree.cpp)
add_executable(K_th_permutation k_th_permutation.cpp)
#add_executable(Largearray largearray.c) #Cannot be compiled
add_executable(Largest_rectangle_under_skyline largest_rectangle_under_skyline.cpp)
add_executable(Lazy_init lazy_init.cpp)
add_executable(Lead_changes lead_changes.cpp)
add_executable(Length_of_last_word length_of_last_word.cpp)
add_executable(Levenshtein_distance levenshtein_distance.cpp)
add_executable(Line_most_points Line_most_points.cpp)
add_executable(List_pivoting list_pivoting.cpp)
add_executable(Load_balancing load_balancing.cpp)
add_executable(Longest_contained_range longest_contained_range.cpp)
add_executable(Longest_subarray_with_distinct_entries longest_subarray_with_distinct_entries.cpp)
add_executable(Longest_substring_without_repeating_characters longest_substring_without_repeating_characters.cpp)
add_executable(Longest_valid_parentheses longest_valid_parentheses.cpp)
add_executable(Longest_increasing_subarray longest_increasing_subarray.cpp)
add_executable(Longest_nondecreasing_subsequence Longest_nondecreasing_subsequence.cpp)
add_executable(Longest_subarray_k longest_subarray_k.cpp)
add_executable(Longest_subarray_k_improved longest_subarray_k_improved.cpp)
add_executable(Longest_valid_parentheses_const_space longest_valid_parentheses_const_space.cpp)
add_executable(Look_and_say look_and_say.cpp)
add_executable(Lowest_common_ancestor lowest_common_ancestor.cpp)
add_executable(Lowest_common_ancestor_hash lowest_common_ancestor_hash.cpp)
add_executable(Lowest_common_ancestor_no_parent lowest_common_ancestor_no_parent.cpp)
add_executable(LRUCache LRU_cache.cpp)
add_executable(Matrix_rotation_flip matrix_rotation_flip.cpp)
add_executable(Matrix_rotation matrix_rotation.cpp)
add_executable(Matrix_rotation_constant matrix_rotation_constant.cpp)
add_executable(Matrix_rotation_naive matrix_rotation_naive.cpp)
add_executable(Matrix_search matrix_search.cpp)
add_executable(Max_sum_subarray Max_sum_subarray.cpp)
add_executable(Max_concatenation_numbers max_concatenation_numbers.cpp)
add_executable(Max_difference_k_pairs max_difference_k_pairs.cpp)
add_executable(Max_difference_unlimited_pairs Max_difference_unlimited_pairs.cpp)
add_executable(Max_submatrix_rectangle Max_submatrix_rectangle.cpp)
add_executable(Max_submatrix_rectangle_improved Max_submatrix_rectangle_improved.cpp)
add_executable(Max_submatrix_square Max_submatrix_square.cpp)
add_executable(Maximum_container Maximum_container.cpp)
add_executable(Maximum_minimum_difference_k Maximum_minimum_difference_k.cpp)
add_executable(Maximum_sliding_window Maximum_sliding_window.cpp)
add_executable(Maximum_sliding_window_template Maximum_sliding_window_template.cpp)
add_executable(Maximum_subarray_in_circular_array Maximum_subarray_in_circular_array.cpp)
add_executable(Maximum_subarray_in_circular_array_constant_space Maximum_subarray_in_circular_array_constant_space.cpp)
add_executable(Median_sorted_circular_linked_list Median_sorted_circular_linked_list.cpp)
add_executable(Merge_two_sorted_arrays_in_place merge_two_sorted_arrays_in_place.cpp)
add_executable(Merge_contacts merge_contacts.cpp)
add_executable(Merge_sorted_arrays Merge_sorted_arrays.cpp)
add_executable(Merge_sorted_lists Merge_sorted_lists.cpp)
add_executable(Merge_two_BSTs Merge_two_BSTs.cpp)
add_executable(Minimum_distance_3_sorted_arrays Minimum_distance_3_sorted_arrays.cpp)
add_executable(Minimum_subarray_difference Minimum_subarray_difference.cpp)
add_executable(Minimum_waiting_time Minimum_waiting_time.cpp)
add_executable(Missing_element Missing_element.cpp)
add_executable(Morris_traversal Morris_traversal.cpp)
add_executable(Multibet_card_color_game Multibet_card_color_game.cpp)
add_executable(MultiplyShiftAdd MultiplyShiftAdd.cpp)
add_executable(N_queens_count n_queens_count.cpp)
add_executable(N_queens_permutation n_queens_permutation.cpp)
add_executable(N_queens n_queens.cpp)
add_executable(Nearest_repetition Nearest_repetition.cpp)
add_executable(Nearest_restaurant Nearest_restaurant.cpp)
add_executable(Next_permutation Next_permutation.cpp)
add_executable(Nonconstructible_change nonconstructible_change.cpp)
add_executable(Nonuniform_random_number_generation nonuniform_random_number_generation.cpp)
add_executable(Normalized_pathnames normalized_pathnames.cpp)
add_executable(Number_steps number_steps.cpp)
add_executable(Number_ways Number_ways.cpp)
add_executable(Number_ways_obstacles Number_ways_obstacles.cpp)
add_executable(Offline_minimum Offline_minimum.cpp)
add_executable(Offline_sampling Offline_sampling.cpp)
add_executable(Online_median Online_median.cpp)
add_executable(Online_sampling Online_sampling.cpp)
add_executable(Order_statistic order_statistic.cpp)
add_executable(Overlapping_days Overlapping_days.cpp)
add_executable(Overlapping_lists Overlapping_lists.cpp)
add_executable(Overlapping_lists_no_cycle Overlapping_lists_no_cycle.cpp)
add_executable(Painting_iterative Painting_iterative.cpp)
add_executable(Painting_recursive Painting_recursive.cpp)
add_executable(Palindrome_number palindrome_number.cpp)
add_executable(Palindrome_partitioning_min_cuts palindrome_partitioning_min_cuts.cpp)
add_executable(Palindrome_partitioning palindrome_partitioning.cpp)
add_executable(Palindrome_linked_list Palindrome_linked_list.cpp)
add_executable(Parity Parity.cpp)
add_executable(Parity1 Parity1.cpp)
add_executable(Partition_array partition_array.cpp)
add_executable(Partition_2_same_average Partition_2_same_average.cpp)
add_executable(Pascal_triangle_1 pascal_triangle_1.cpp)
add_executable(Pascal_triangle_2 pascal_triangle_2.cpp)
add_executable(Path_sum_binary_tree_all path_sum_binary_tree_all.cpp)
add_executable(Path_sum_binary_tree path_sum_binary_tree.cpp)
add_executable(Permutation_array Permutation_array.cpp)
#add_executable(Permutations_alternative_profiled permutations_alternative_profiled.cpp)
add_executable(Permutations_alternative permutations_alternative.cpp)
add_executable(Permutations_unique permutations_unique.cpp)
add_executable(Permutations permutations.cpp)
add_executable(Phone_mnemonic Phone_mnemonic.cpp)
add_executable(Picking_up_coins Picking_up_coins.cpp)
add_executable(Picking_up_coins_dont_lose Picking_up_coins_dont_lose.cpp)
add_executable(Planning_fishing Planning_fishing.cpp)
add_executable(Plus_one plus_one.cpp)
add_executable(Points_covering_intervals Points_covering_intervals.cpp)
add_executable(Points_covering_intervals_alternative Points_covering_intervals_alternative.cpp)
add_executable(Points_covering_intervals_sorting points_covering_intervals_sorting.cpp)
add_executable(Populating_next_right_pointers_any_binary_tree populating_next_right_pointers_any_binary_tree.cpp)
add_executable(Populating_next_right_pointers populating_next_right_pointers.cpp)
add_executable(Power_x_y power_x_y.cpp)
add_executable(Power_set Power_set.cpp)
add_executable(Power_set_alternative Power_set_alternative.cpp)
add_executable(Prefix_search prefix_search.cpp)
add_executable(Pretty_printing Pretty_printing.cpp)
add_executable(Prime_sieve_basic prime_sieve_basic.cpp)
add_executable(Prime_sieve Prime_sieve.cpp)
add_executable(Print_linked_list_reverse_order print_linked_list_reverse_order.cpp)
add_executable(Queue_from_stacks Queue_from_stacks.cpp)
add_executable(Queue_using_two_integers Queue_using_two_integers.cpp)
add_executable(Queue_with_max Queue_with_max.cpp)
add_executable(Queue_with_max_alternative Queue_with_max_alternative.cpp)
add_executable(Queue_with_max_intro queue_with_max_intro.cpp)
add_executable(Rabin_karp rabin_karp.cpp)
add_executable(Range_lookup_BST range_lookup_BST.cpp)
add_executable(Rays_covering_arcs Rays_covering_arcs.cpp)
add_executable(Rearrange Rearrange.cpp)
add_executable(Rebuild_BST_postorder Rebuild_BST_postorder.cpp)
add_executable(Rebuild_BST_postorder_better Rebuild_BST_postorder_better.cpp)
add_executable(Rebuild_BST_preorder Rebuild_BST_preorder.cpp)
add_executable(Rebuild_BST_preorder_better Rebuild_BST_preorder_better.cpp)
add_executable(Reconstruct_almost_bst reconstruct_almost_bst.cpp)
add_executable(Reconstruct_binary_tree_post_in_orders Reconstruct_binary_tree_post_in_orders.cpp)
add_executable(Reconstruct_binary_tree_pre_in_orders Reconstruct_binary_tree_pre_in_orders.cpp)
add_executable(Reconstruct_preorder_with_null Reconstruct_preorder_with_null.cpp)
add_executable(Recover_binary_search_tree_constant_space recover_binary_search_tree_constant_space.cpp)
add_executable(Regular_expression Regular_expression.cpp)
add_executable(Remove_duplicates_from_sorted_array remove_duplicates_from_sorted_array.cpp)
add_executable(Remove_duplicates_sorted_list remove_duplicates_sorted_list.cpp)
add_executable(Remove_element remove_element.cpp)
add_executable(Remove_twice_duplicates_from_sorted_array remove_twice_duplicates_from_sorted_array.cpp)
add_executable(Remove_kth_last_list Remove_kth_last_list.cpp)
add_executable(Rendering_calendar Rendering_calendar.cpp)
add_executable(Replace_and_remove Replace_and_remove.cpp)
add_executable(Reservoir_sampling Reservoir_sampling.cpp)
add_executable(Reverse_integer reverse_integer.cpp)
add_executable(Reverse_list_in_k_group reverse_list_in_k_group.cpp)
add_executable(Reverse_bits Reverse_bits.cpp)
add_executable(Reverse_linked_list_from_s_to_f reverse_linked_list_from_s_to_f.cpp)
add_executable(Reverse_linked_list_iterative Reverse_linked_list_iterative.cpp)
add_executable(Reverse_linked_list_recursive Reverse_linked_list_recursive.cpp)
add_executable(Reverse_words Reverse_words.cpp)
add_executable(Road_network Road_network.cpp)
add_executable(Roman_to_integer roman_to_integer.cpp)
add_executable(Rook_attack rook_attack.cpp)
add_executable(Rotate_array Rotate_array.cpp)
add_executable(RPN RPN.cpp)
add_executable(Run_length_compression Run_length_compression.cpp)
add_executable(Score_combination Score_combination.cpp)
add_executable(Score_combination_alternative Score_combination_alternative.cpp)
add_executable(Score_permutation Score_permutation.cpp)
add_executable(Scramble_string scramble_string.cpp)
add_executable(Search_a_range_sorted_array search_a_range_sorted_array.cpp)
add_executable(Search_insert_position_sorted_array search_insert_position_sorted_array.cpp)
add_executable(Search_rotated_sorted_array_with_duplicates search_rotated_sorted_array_with_duplicates.cpp)
add_executable(Search_rotated_sorted_array search_rotated_sorted_array.cpp)
add_executable(Search_a_pair_sorted_array Search_a_pair_sorted_array.cpp)
add_executable(Search_BST search_BST.cpp)
add_executable(Search_BST_first_larger_k Search_BST_first_larger_k.cpp)
add_executable(Search_BST_for_first_occurrence_iterative Search_BST_for_first_occurrence_iterative.cpp)
add_executable(Search_BST_for_first_occurrence_recursive Search_BST_for_first_occurrence_recursive.cpp)
add_executable(Search_frequent_items Search_frequent_items.cpp)
add_executable(Search_list search_list.cpp)
add_executable(Search_majority Search_majority.cpp)
add_executable(Search_maze Search_maze.cpp)
add_executable(Search_min_first_BST Search_min_first_BST.cpp)
add_executable(Search_postings_list_iterative Search_postings_list_iterative.cpp)
add_executable(Search_postings_list_recursive Search_postings_list_recursive.cpp)
add_executable(Shortest_path_fewest_edges Shortest_path_fewest_edges.cpp)
add_executable(Shortest_unique_prefix Shortest_unique_prefix.cpp)
add_executable(Sliding_window Sliding_window.cpp)
add_executable(Smallest_subarray_covering_set Smallest_subarray_covering_set.cpp)
add_executable(Snake_string snake_string.cpp)
add_executable(Sort_list sort_list.cpp)
add_executable(Sort_k_increasing_decreasing_array sort_k_increasing_decreasing_array.cpp)
add_executable(Sorted_list_to_BST Sorted_list_to_BST.cpp)
add_executable(Spiral_matrix Spiral_matrix.cpp)
add_executable(Spiral_matrix_clockwise Spiral_matrix_clockwise.cpp)
add_executable(Spreadsheet_encoding Spreadsheet_encoding.cpp)
add_executable(Square_root_int square_root_int.cpp)
add_executable(Square_root Square_root.cpp)
add_executable(Stable_assignment Stable_assignment.cpp)
add_executable(Stack_queue_using_heap Stack_queue_using_heap.cpp)
add_executable(Stack_sorting Stack_sorting.cpp)
add_executable(Stack_with_max Stack_with_max.cpp)
add_executable(Stack_with_max_improved Stack_with_max_improved.cpp)
add_executable(String_in_matrix String_in_matrix.cpp)
add_executable(String_matching_wildcard String_matching_wildcard.cpp)
add_executable(Student_search student_search.cpp)
add_executable(Student_sort student_sort.cpp)
add_executable(Subseq_cover Subseq_cover.cpp)
add_executable(Substring_with_concatenation_of_all_words substring_with_concatenation_of_all_words.cpp)
add_executable(Successor Successor.cpp)
add_executable(Sudoku_check sudoku_check.cpp)
add_executable(Sudoku_solve Sudoku_solve.cpp)
add_executable(Sum_root_to_leaf_binary_tree sum_root_to_leaf_binary_tree.cpp)
add_executable(Surrounded_regions surrounded_regions.cpp)
add_executable(Swap_bits swap_bits.cpp)
add_executable(Symmetric_binary_tree Symmetric_binary_tree.cpp)
add_executable(Tail Tail.cpp)
add_executable(Tail_coin Tail_coin.cpp)
add_executable(Task_assignment Task_assignment.cpp)
add_executable(Team_photo_1 Team_photo_1.cpp)
add_executable(Team_photo_2 Team_photo_2.cpp)
add_executable(Team_reachability team_reachability.cpp)
add_executable(Theory_of_equality Theory_of_equality.cpp)
add_executable(Three_jugs Three_jugs.cpp)
add_executable(Ties_election Ties_election.cpp)
add_executable(Top_k top_k.cpp)
add_executable(Tournament_tree Tournament_tree.cpp)
add_executable(Tower_hanoi tower_hanoi.cpp)
add_executable(Transform_string_to_other Transform_string_to_other.cpp)
add_executable(Transitive_closure Transitive_closure.cpp)
add_executable(Trapping_rain_water trapping_rain_water.cpp)
add_executable(Tree_diameter Tree_diameter.cpp)
add_executable(Tree_traversal tree_traversal.cpp)
add_executable(Triangle triangle.cpp)
add_executable(Uniform_random_number_generation Uniform_random_number_generation.cpp)
add_executable(Union_intervals Union_intervals.cpp)
add_executable(Unique_binary_trees_all unique_binary_trees_all.cpp)
add_executable(Unique_binary_trees unique_binary_trees.cpp)
add_executable(Update_BST Update_BST.cpp)
add_executable(Valid_IP_address valid_ip_address.cpp)
add_executable(Valid_number valid_number.cpp)
add_executable(Valid_palindrome valid_palindrome.cpp)
add_executable(Valid_parentheses valid_parentheses.cpp)
add_executable(Valid_IP_address_recursive valid_ip_address_recursive.cpp)
add_executable(View_from_above view_from_above.cpp)
add_executable(View_sunset view_sunset.cpp)
add_executable(Wiring_circuit_board wiring_circuit_board.cpp)
add_executable(Word_breaking_2 word_breaking_2.cpp)
add_executable(Word_breaking word_breaking.cpp)
add_executable(Word_breaking_alternative Word_breaking_alternative.cpp)
add_executable(Zigzag_conversion zigzag_conversion.cpp)
add_executable(Zipping_list zipping_list.cpp)

#If thread support is enabled
if (ENV{_GLIBCXX_HAS_GTHREADS})
    add_executable(Two_thread_increment two_thread_increment.cpp)
endif (ENV{_GLIBCXX_HAS_GTHREADS})


# tests
add_executable(anagramsTest test/anagrams_test.cpp)
add_executable(anonymous_letter_test test/anonymous_letter_test.cpp)
add_executable(Balanced_binary_tree_test test/Balanced_binary_tree_test.cpp Binary_tree_prototype.h Balanced_binary_tree.cpp)
add_executable(c++11_random c++11_random.cpp test/tree_utils.h)
add_executable(container_with_most_water_test test/container_with_most_water_test.cpp)
add_executable(Convert_base_test test/convert_base_test.cpp)
add_executable(First_missing_positive_test test/first_missing_positive_test.cpp)
add_executable(Gassing_up_test test/gassing_up_test.cpp)
add_executable(Intersect_sorted_arrays3_test test/intersect_sorted_arrays3_test.cpp)
add_executable(Matrix_search_test test/matrix_search_test.cpp)
add_executable(Normalized_pathnames_test test/normalized_pathnames_test.cpp)
add_executable(Number_ways_test test/number_ways_test.cpp)
add_executable(Palindrome_number_test test/palindrome_number_test.cpp)
add_executable(RPN_test test/RPN_test.cpp)
add_executable(Snake_string_test test/snake_string_test.cpp)
add_executable(Spreadsheet_encoding_test test/spreadsheet_encoding_test.cpp)
add_executable(Square_root_int_test test/square_root_int_test.cpp)
add_executable(Sudoku_solve_test test/sudoku_solve_test.cpp)
add_executable(JsonWriter_test test/json_writer_test.cpp)